setup_trino with JVM env custom configured for metastore